--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>portfolio</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 </head>
 <body>
     <div class="aside">
+        <img src="images/logo.png" alt="">
         <nav>
             <ul>
                 <li><a href="#">About</a></li>
@@ -18,5 +19,12 @@
             </ul>
         </nav>
     </div>
+    <header>
+        <div class="content">
+            <h2>welcome</h2>
+            <p>I'm Romain MAILLOT a 19 years old french designer living in Paris.</p>
+        </div>
+        <canvas width="800" height="600" class="canvas js-canvas"></canvas>
+    </header>
 </body>
 </html>
