:bug: Mouse position

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,11 @@
             </ul>
         </nav>
     </div>
+    <div class="mouse"></div>
     <header>
         <div class="content">
             <h2>welcome</h2>
-            <p>I'm Romain MAILLOT a 19 years old french designer living in Paris.</p>
+            <p>I'm Romain MAILLOT a 19 years old french developer living in Paris.</p>
         </div>
         <canvas width="800" height="600" class="canvas js-canvas"></canvas>
     </header>
