--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
         <img src="images/logo.png" alt="">
         <nav>
             <ul>
-                <li><a href="#" class="active">About</a></li>
-                <li><a href="#work">Work</a></li>
+                <li><a class="about active" href="#">About</a></li>
+                <li><a class="work" href="#work">Work</a></li>
                 <li><a href="#">CV</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
