--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
             <ul>
                 <li><a class="about active" href="#">About</a></li>
                 <li><a class="work" href="#work">Work</a></li>
-                <li><a href="#">CV</a></li>
+                <li><a href="resume/cv-en.pdf" download="cv-Romain_MAILLOT.pdf">CV</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </div>
-    <div class="mouse"></div>
+    <!-- <div class="mouse"></div> -->
     <header>
         <div class="content">
             <h2>welcome</h2>
@@ -28,13 +28,13 @@
         <canvas width="800" height="600" class="canvas js-canvas"></canvas>
     </header>
     <main>
-        <div id="work" class="project js-project" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle." data-position="left">
+        <div id="work" class="project js-project" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle." data-position="left" data-link="http://www.geffard.com/">
             <img src="images/mockup_oliviergeffard.jpg" alt="">
         </div>
-        <div class="project js-project" data-title="DCS" data-text="The digital consultiong summit was an event organise by the ESCP school." data-position="right">
+        <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="http://www.geffard.com/">
             <img src="images/mockup_affichedcs.jpg" alt="">
         </div>
-        <div class="project js-project" data-title="Personnal project" data-text="Here some of my personnal work." data-position="left">
+        <div class="project js-project" data-title="Personnal project" data-text="Here some of my personnal work." data-position="left" data-link="https://agitated-noyce-746c27.netlify.com/">
             <img src="images/mockup_personnal.jpg" alt="">
         </div>
     </main>
