--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
+    <link rel="icon" type="image/ico" href="logo.ico" >
 </head>
 <body>
     <div class="aside">
@@ -14,7 +15,7 @@
             <ul>
                 <li><a class="about active" href="#">About</a></li>
                 <li><a class="work" href="#work">Work</a></li>
-                <li><a href="resume/cv-en.pdf" download="cv-Romain_MAILLOT.pdf">CV</a></li>
+                <li><a href="resume/cv-en.pdf" target="_blank">CV</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -22,19 +23,19 @@
     <!-- <div class="mouse"></div> -->
     <header>
         <div class="content">
-            <h2>welcome</h2>
-            <p>I'm Romain MAILLOT a 19 years old french developer living in Paris.</p>
+            <h2>Welcome,</h2>
+            <p>I'm Romain MAILLOT a 19 years old french developer & designer living in Paris.</p>
         </div>
         <canvas width="800" height="600" class="canvas js-canvas"></canvas>
     </header>
     <main>
-        <div id="work" class="project js-project" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle." data-position="left" data-link="http://www.geffard.com/">
+        <div id="work" class="project js-project" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle." data-position="left" data-link="http://www.geffard.com/" data-hover="go to website">
             <img src="images/mockup_oliviergeffard.jpg" alt="">
         </div>
-        <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="http://www.geffard.com/">
+        <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="#" data-hover="see case study">
             <img src="images/mockup_affichedcs.jpg" alt="">
         </div>
-        <div class="project js-project" data-title="Personnal project" data-text="Here some of my personnal work." data-position="left" data-link="https://agitated-noyce-746c27.netlify.com/">
+        <div class="project js-project" data-title="Personnal project" data-text="Here some of my personnal work." data-position="left" data-link="https://agitated-noyce-746c27.netlify.com/" data-hover="go to website">
             <img src="images/mockup_personnal.jpg" alt="">
         </div>
     </main>
