:sparkles: Contact menu change when contact arrive

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                 <li><a class="about active" href="#">About</a></li>
                 <li><a class="work" href="#work">Work</a></li>
                 <li><a href="resume/cv-en.pdf" target="_blank">CV</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a class="contact" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -42,5 +42,15 @@
             <img src="images/mockup_affichedcs.jpg" alt="">
         </div>
     </main>
+    <footer id="contact">
+        <ul>
+            <li><a href="mailto:romain.maillot@gmail.com">Mail</a></li>
+            <li><a href="https://www.linkedin.com/in/romain-maillot/?locale=en_US">LinkedIn</a></li>
+            <li><a href="https://github.com/RomainMaillot">Github</a></li>
+            <li><a href="https://dribbble.com/RMaillot">Dribble</a></li>
+            <li><a href="https://www.instagram.com/romain__maillot/">Instagram</a></li>
+        </ul>
+        <p>Copyright © 2019 Romain Maillot</p>
+    </footer>
 </body>
 </html>
