--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
             <ul>
                 <li><a class="about active" href="#">About</a></li>
                 <li><a class="work" href="#work">Work</a></li>
-                <li><a href="resume/cv-en.pdf" target="_blank">CV</a></li>
                 <li><a class="contact" href="#contact">Contact</a></li>
+                <li><a href="resume/cv-en.pdf" target="_blank">Resume</a></li>
             </ul>
         </nav>
     </div>
@@ -35,7 +35,7 @@
         <div class="project js-project" data-title="Webdock Society" data-text="This was a school project, with my team, we decided to make a webdock on intangible culture" data-position="right" data-link="https://webdocksociety.netlify.com/" data-hover="go to website">
             <img src="images/webdock.png" alt="">
         </div>
-        <div class="project js-project" data-title="Personnal project" data-text="Here some of my personnal work." data-position="left" data-link="https://agitated-noyce-746c27.netlify.com/" data-hover="go to website">
+        <div class="project js-project" data-title="Personnal project" data-text="Here some of my personnal work." data-position="left" data-link="https://earthquake-simulator.netlify.com" data-hover="go to website">
             <img src="images/mockup_personnal.jpg" alt="">
         </div>
         <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="#" data-hover="see case study">
@@ -44,11 +44,11 @@
     </main>
     <footer id="contact">
         <ul>
-            <li><a href="mailto:romain.maillot@gmail.com">Mail</a></li>
-            <li><a href="https://www.linkedin.com/in/romain-maillot/?locale=en_US">LinkedIn</a></li>
-            <li><a href="https://github.com/RomainMaillot">Github</a></li>
-            <li><a href="https://dribbble.com/RMaillot">Dribble</a></li>
-            <li><a href="https://www.instagram.com/romain__maillot/">Instagram</a></li>
+            <li><a class="link" href="mailto:romain.maillot@gmail.com">Mail</a></li>
+            <li><a class="link" href="https://www.linkedin.com/in/romain-maillot/?locale=en_US">LinkedIn</a></li>
+            <li><a class="link" href="https://github.com/RomainMaillot">Github</a></li>
+            <li><a class="link" href="https://dribbble.com/RMaillot">Dribble</a></li>
+            <li><a class="link" href="https://www.instagram.com/romain__maillot/">Instagram</a></li>
         </ul>
         <p>Copyright © 2019 Romain Maillot</p>
     </footer>
