--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
         <div id="work" class="project js-project" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle." data-position="left" data-link="http://www.geffard.com/" data-hover="go to website">
             <img src="images/mockup_oliviergeffard.jpg" alt="">
         </div>
-        <div class="project js-project" data-title="Webdock Society" data-text="This was a school project, with my team, we decided to make a webdock on intangible culture" data-position="right" data-link="https://webdocksociety.netlify.com/" data-hover="go to website">
+        <div class="project js-project" data-title="Webdock Society" data-text="This was a school project, with my team, we decided to make a webdock on intangible culture." data-position="right" data-link="https://webdocksociety.netlify.com/" data-hover="go to website">
             <img src="images/webdock.png" alt="">
         </div>
-        <div class="project js-project" data-title="Personnal project" data-text="Here some of my personnal work." data-position="left" data-link="https://earthquake-simulator.netlify.com" data-hover="go to website">
+        <div class="project js-project" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css." data-position="left" data-link="https://earthquake-simulator.netlify.com" data-hover="go to website">
             <img src="images/mockup_personnal.jpg" alt="">
         </div>
         <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="#" data-hover="see case study">
