:sparkles: Add work in progress page

--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,14 @@
         <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="#" data-hover="see case study">
             <img src="images/mockup_affichedcs.jpg" alt="">
         </div>
+        <div class="casestudy">
+            <p>Work in progress.</p>
+            <div class="close"></div>
+        </div>
     </main>
     <footer id="contact">
         <ul>
-            <li><a class="link" href="mailto:romain.maillot@gmail.com">Mail</a></li>
+            <li><a class="link" href="mailto:romainmaillot.rm@gmail.com">Mail</a></li>
             <li><a class="link" href="https://www.linkedin.com/in/romain-maillot/?locale=en_US">LinkedIn</a></li>
             <li><a class="link" href="https://github.com/RomainMaillot">Github</a></li>
             <li><a class="link" href="https://dribbble.com/RMaillot">Dribble</a></li>
