--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,16 @@
     <title>portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link rel="icon" type="image/ico" href="logo.ico" >
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136594579-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-136594579-1');
+    </script>
+
 </head>
 <body>
     <div class="aside">
