:sparkles: Add portfolio photo

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
                 <li><a class="work" href="#work">Work</a></li>
                 <li><a class="contact" href="#contact">Contact</a></li>
                 <li><a href="resume/cv-en.pdf" target="_blank">Resume</a></li>
+                <li><a href="portfolio_photo.pdf" target="_blank">Pictures</a></li>
             </ul>
         </nav>
     </div>
