:iphone: Add screen for tablet and phone

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,9 @@
         </div>
         <canvas width="800" height="600" class="canvas js-canvas"></canvas>
     </header>
+    <div class="responsive">
+        <h1>It's coming.</h1>
+    </div>
     <main>
         <div id="work" class="project js-project" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle." data-position="left" data-link="http://www.geffard.com/" data-hover="go to website">
             <img src="images/mockup_oliviergeffard.jpg" alt="">
