--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
         <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="#" data-hover="see case study">
             <img src="images/mockup_affichedcs.jpg" alt="">
         </div>
-        <div class="project js-project" data-title="POP QUIZZ" data-text="This is a project of pop culture question where I was in charge of the front end development with react" data-position="left" data-link="http://popquizz.aymericm.fr/" data-hover="go to website">
+        <div class="project js-project" data-title="POP QUIZZ" data-text="This is a project of pop culture question where I was in charge of the front end development with react" data-position="left" data-link="https://popquizz.netlify.com/" data-hover="go to website">
             <img src="images/pop_quizz.png" alt="">
         </div>
         <div class="casestudy">
