:sparkles: Projects informations

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>portfolio</title>
+    <title>Romain Maillot - Developer & Designer</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
@@ -63,7 +63,26 @@
             <img src="images/pop_quizz.png" alt="">
         </div>
         <div class="casestudy">
-            <p>Work in progress.</p>
+            <div class="info">
+                <h3>Project</h3>
+                <p class="project_idea">Développements et design d'un site internet</p>
+            </div>
+            <div class="info">
+                <h3>Techno</h3>
+                <p class="techno">HTML, CSS, JS</p>
+            </div>
+            <div class="info">
+                <h3>Team</h3>
+                <p class="team">Gautier.B, Mathias.G, Louis.L</p>
+            </div>
+            <div class="info">
+                <h3>Job</h3>
+                <p class="job">Chef de projet, designer et front developper</p>
+            </div>
+            <div class="info">
+                <h3>Description</h3>
+                <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis rerum quod harum assumenda quam omnis beatae temporibus, debitis nobis consequatur perferendis nam eos vero voluptas dolores. Facere dolore nobis corporis!</p>
+            </div>
             <div class="close"></div>
         </div>
     </main>
@@ -77,5 +96,6 @@
         </ul>
         <p>Copyright © 2019 Romain Maillot</p>
     </footer>
+    <script type="text/javascript" src="infos.json"></script>
 </body>
 </html>
