--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,6 @@
                 <li><a class="about active" href="#">About</a></li>
                 <li><a class="work" href="#work">Work</a></li>
                 <li><a class="contact" href="#contact">Contact</a></li>
-                <li><a href="resume/cv-en.pdf" target="_blank">Resume</a></li>
-                <li><a href="portfolio_photo.pdf" target="_blank">Pictures</a></li>
             </ul>
         </nav>
     </div>
@@ -40,6 +38,7 @@
         <div class="content">
             <h2>Welcome,</h2>
             <p>I'm Romain MAILLOT a 19 years old french developer & designer living in Paris.</p>
+            <p>Here is my <a href="resume/cv-en.pdf" target="_blank">resume</a> and a <a href="portfolio_photo.pdf" target="_blank">pictures portfolio</a>.</p>
         </div>
         <canvas width="800" height="600" class="canvas js-canvas"></canvas>
     </header>
@@ -47,48 +46,51 @@
         <h1>It's coming.</h1>
     </div>
     <main>
-        <div id="work" class="project js-project" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle." data-position="left" data-link="http://www.geffard.com/" data-hover="go to website">
+        <div id="work" class="project js-project" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle." data-position="left" data-link="http://www.geffard.com/">
             <img src="images/mockup_oliviergeffard.jpg" alt="">
         </div>
-        <div class="project js-project" data-title="Webdock Society" data-text="This was a school project, with my team, we decided to make a webdock on intangible culture." data-position="right" data-link="https://webdocksociety.netlify.com/" data-hover="go to website">
+        <div class="project js-project" data-title="Webdock Society" data-text="This was a school project, with my team, we decided to make a webdock on intangible culture." data-position="right" data-link="https://webdocksociety.netlify.com/">
             <img src="images/webdock.png" alt="">
         </div>
-        <div class="project js-project" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css." data-position="left" data-link="https://earthquake-simulator.netlify.com" data-hover="go to website">
+        <div class="project js-project" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css." data-position="left" data-link="https://earthquake-simulator.netlify.com">
             <img src="images/mockup_personnal.jpg" alt="">
         </div>
-        <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="#" data-hover="see case study">
+        <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="#" >
             <img src="images/mockup_affichedcs.jpg" alt="">
         </div>
-        <div class="project js-project" data-title="POP QUIZZ" data-text="This is a project of pop culture question where I was in charge of the front end development with react" data-position="left" data-link="https://popquizz.netlify.com/" data-hover="go to website">
+        <div class="project js-project" data-title="POP QUIZZ" data-text="This is a project of pop culture question where I was in charge of the front end development with react" data-position="left" data-link="https://popquizz.netlify.com/">
             <img src="images/pop_quizz.png" alt="">
         </div>
         <div class="casestudy">
             <div class="info">
                 <h3>Project</h3>
-                <p class="project_idea">Développements et design d'un site internet</p>
+                <p class="project_idea"></p>
             </div>
             <div class="info">
                 <h3>Techno</h3>
-                <p class="techno">HTML, CSS, JS</p>
+                <p class="techno"></p>
             </div>
             <div class="info">
                 <h3>Job</h3>
-                <p class="job">Chef de projet, designer et front developper</p>
+                <p class="job"></p>
             </div>
             <div class="info">
                 <h3>Description</h3>
-                <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis rerum quod harum assumenda quam omnis beatae temporibus, debitis nobis consequatur perferendis nam eos vero voluptas dolores. Facere dolore nobis corporis!</p>
+                <p class="description"></p>
+            </div>
+            <div class="info">
+                <a class="project_link" target="_blank" href="#">Go to website</a>
             </div>
             <div class="close"></div>
         </div>
     </main>
     <footer id="contact">
         <ul>
-            <li><a class="link" href="mailto:romainmaillot.rm@gmail.com">Mail</a></li>
-            <li><a class="link" href="https://www.linkedin.com/in/romain-maillot/?locale=en_US">LinkedIn</a></li>
-            <li><a class="link" href="https://github.com/RomainMaillot">Github</a></li>
-            <li><a class="link" href="https://dribbble.com/RMaillot">Dribble</a></li>
-            <li><a class="link" href="https://www.instagram.com/romain__maillot/">Instagram</a></li>
+            <li><a class="link" target="_blank" href="mailto:romainmaillot.rm@gmail.com">Mail</a></li>
+            <li><a class="link" target="_blank" href="https://www.linkedin.com/in/romain-maillot/?locale=en_US">LinkedIn</a></li>
+            <li><a class="link" target="_blank" href="https://github.com/RomainMaillot">Github</a></li>
+            <li><a class="link" target="_blank" href="https://dribbble.com/RMaillot">Dribbble</a></li>
+            <li><a class="link" target="_blank" href="https://www.instagram.com/romain__maillot/">Instagram</a></li>
         </ul>
         <p>Copyright © 2019 Romain Maillot</p>
     </footer>
