--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,9 @@
         <div class="project js-project" data-title="POP QUIZZ" data-text="This is a project of pop culture question where I was in charge of the front end development with react" data-position="left" data-link="https://popquizz.netlify.com/">
             <img src="images/pop_quizz.png" alt="">
         </div>
+        <div class="project js-project" data-title="Portfolio Sacha Tourtoulou" data-text="This is the portfolio of Sacha Tourtoulou, a designer. I developed his site using react and gatsby for server rendering." data-position="right" data-link="https://sacha-tourtoulou.netlify.com/">
+            <img src="images/sacha_portfolio.png" alt="">
+        </div>
         <div class="casestudy">
             <div class="info">
                 <h3>Project</h3>
