--- a/src/index.html
+++ b/src/index.html
@@ -47,22 +47,22 @@
     </div>
     <main>
         <div id="work" class="project js-project" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle." data-position="left" data-link="http://www.geffard.com/">
-            <img src="images/mockup_oliviergeffard.jpg" alt="">
+            <img src="images/mockup_oliviergeffard.jpg" alt="olivier geffard website">
         </div>
         <div class="project js-project" data-title="Webdock Society" data-text="This was a school project, with my team, we decided to make a webdock on intangible culture." data-position="right" data-link="https://webdocksociety.netlify.com/">
-            <img src="images/webdock.png" alt="">
+            <img src="images/webdock.png" alt="webdock sociétal">
         </div>
         <div class="project js-project" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css." data-position="left" data-link="https://earthquake-simulator.netlify.com">
-            <img src="images/mockup_personnal.jpg" alt="">
+            <img src="images/mockup_personnal.jpg" alt="Css animations">
         </div>
         <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="#" >
-            <img src="images/mockup_affichedcs.jpg" alt="">
+            <img src="images/mockup_affichedcs.jpg" alt="Digital consulting summit">
         </div>
         <div class="project js-project" data-title="POP QUIZZ" data-text="This is a project of pop culture question where I was in charge of the front end development with react" data-position="left" data-link="https://popquizz.netlify.com/">
-            <img src="images/pop_quizz.png" alt="">
+            <img src="images/pop_quizz.png" alt="Jeux de quizz">
         </div>
         <div class="project js-project" data-title="Portfolio Sacha Tourtoulou" data-text="This is the portfolio of Sacha Tourtoulou, a designer. I developed his site using react and gatsby for server rendering." data-position="right" data-link="https://sacha-tourtoulou.netlify.com/">
-            <img src="images/sacha_portfolio.png" alt="">
+            <img src="images/sacha_portfolio.png" alt="Sacha tourtoulou portfolio">
         </div>
         <div class="casestudy">
             <div class="info">
