:sparkles: Remove useless h1 and add noindex no-follow on socials links

--- a/src/index.html
+++ b/src/index.html
@@ -42,9 +42,9 @@
         </div>
         <canvas width="800" height="600" class="canvas js-canvas"></canvas>
     </header>
-    <div class="responsive">
+    <!-- <div class="responsive">
         <h1>It's coming.</h1>
-    </div>
+    </div> -->
     <main>
         <div id="work" class="project js-project" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle." data-position="left" data-link="http://www.geffard.com/">
             <img src="images/mockup_oliviergeffard.jpg" alt="olivier geffard website">
@@ -89,11 +89,11 @@
     </main>
     <footer id="contact">
         <ul>
-            <li><a class="link" target="_blank" href="mailto:romainmaillot.rm@gmail.com">Mail</a></li>
-            <li><a class="link" target="_blank" href="https://www.linkedin.com/in/romain-maillot/?locale=en_US">LinkedIn</a></li>
-            <li><a class="link" target="_blank" href="https://github.com/RomainMaillot">Github</a></li>
-            <li><a class="link" target="_blank" href="https://dribbble.com/RMaillot">Dribbble</a></li>
-            <li><a class="link" target="_blank" href="https://www.instagram.com/romain__maillot/">Instagram</a></li>
+            <li><a class="link" target="_blank" content="noindex, follow" href="mailto:romainmaillot.rm@gmail.com">Mail</a></li>
+            <li><a class="link" target="_blank" content="noindex, follow" href="https://www.linkedin.com/in/romain-maillot/?locale=en_US">LinkedIn</a></li>
+            <li><a class="link" target="_blank" content="noindex, follow" href="https://github.com/RomainMaillot">Github</a></li>
+            <li><a class="link" target="_blank" content="noindex, follow" href="https://dribbble.com/RMaillot">Dribbble</a></li>
+            <li><a class="link" target="_blank" content="noindex, follow" href="https://www.instagram.com/romain__maillot/">Instagram</a></li>
         </ul>
         <p>Copyright © 2019 Romain Maillot</p>
     </footer>
