--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
         <div class="project js-project" data-title="Webdock Society" data-text="This was a school project, with my team, we decided to make a webdock on intangible culture." data-position="right" data-link="https://webdocksociety.netlify.com/">
             <img src="images/webdock.png" alt="webdock sociétal">
         </div>
-        <div class="project js-project" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css." data-position="left" data-link="https://earthquake-simulator.netlify.com">
+        <!-- <div class="project js-project" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css." data-position="left" data-link="https://earthquake-simulator.netlify.com">
             <img src="images/mockup_personnal.jpg" alt="Css animations">
         </div>
         <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="#" >
@@ -64,7 +64,7 @@
         </div>
         <div class="project js-project" data-title="Portfolio Sacha Tourtoulou" data-text="This is the portfolio of Sacha Tourtoulou, a designer. I developed his site using react and gatsby for server rendering." data-position="right" data-link="https://sacha-tourtoulou.netlify.com/">
             <img src="images/sacha_portfolio.png" alt="Sacha tourtoulou portfolio">
-        </div>
+        </div> -->
         <div class="casestudy">
             <div class="info">
                 <h3>Project</h3>
@@ -165,6 +165,7 @@
 
         varying vec3 vVertexPosition;
         varying vec2 vTextureCoord;
+        varying vec2 vTextureMatrixCoord;
 
         uniform sampler2D simplePlaneTexture;
 
