--- a/src/index.html
+++ b/src/index.html
@@ -197,13 +197,14 @@
             float waveSinusoid = sin(8.0 * (distanceFromMouse - ((uTime / 50.0) * 0.5)));
 
             // attenuate the effect based on mouse distance
-            float distanceStrength = distanceFromMouse / 2.0;
+            // float distanceStrength = distanceFromMouse / 2.0;
+            float distanceStrength = distanceFromMouse / 4.0;
 
             // calculate our distortion effect
             float distortionEffect =  distanceStrength * waveSinusoid;
 
             // apply it to our vertex position
-            vertexPosition.z +=  distortionEffect / 5.0;
+            vertexPosition.z +=  distortionEffect / 2.0;
             vertexPosition.x +=  (distortionEffect / 15.0 * (uResolution.x / uResolution.y) * (uMousePosition.x - vertexPosition.x));
             vertexPosition.y +=  distortionEffect / 15.0 * (uMousePosition.y - vertexPosition.y);
 
