--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     <header>
         <div class="content">
             <h2>Welcome,</h2>
-            <p>I'm Romain MAILLOT a 19 years old french developer & designer living in Paris.</p>
+            <p>I'm Romain MAILLOT a creative developer & designer living in Paris.</p>
             <p>Here is my <a href="resume/cv-en.pdf" target="_blank">resume</a> and a <a href="portfolio_photo.pdf" target="_blank">pictures portfolio</a>.</p>
         </div>
         <div class="curtain" data-vs-id="plane-vs" data-fs-id="plane-fs">
@@ -55,10 +55,10 @@
         <div class="project js-project" data-title="Webdock Society" data-text="This was a school project, with my team, we decided to make a webdock on intangible culture." data-position="right" data-link="https://webdocksociety.netlify.com/">
             <img src="images/webdock.png" alt="webdock sociétal">
         </div>
-        <!-- <div class="project js-project" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css." data-position="left" data-link="https://earthquake-simulator.netlify.com">
+        <div class="project js-project" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css." data-position="left" data-link="https://earthquake-simulator.netlify.com">
             <img src="images/mockup_personnal.jpg" alt="Css animations">
         </div>
-        <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" data-link="#" >
+        <div class="project js-project" data-title="DCS" data-text="The digital consulting summit was an event organise by the ESCP school." data-position="right" >
             <img src="images/mockup_affichedcs.jpg" alt="Digital consulting summit">
         </div>
         <div class="project js-project" data-title="POP QUIZZ" data-text="This is a project of pop culture question where I was in charge of the front end development with react" data-position="left" data-link="https://popquizz.netlify.com/">
@@ -66,8 +66,8 @@
         </div>
         <div class="project js-project" data-title="Portfolio Sacha Tourtoulou" data-text="This is the portfolio of Sacha Tourtoulou, a designer. I developed his site using react and gatsby for server rendering." data-position="right" data-link="https://sacha-tourtoulou.netlify.com/">
             <img src="images/sacha_portfolio.png" alt="Sacha tourtoulou portfolio">
-        </div> -->
-        <div class="casestudy">
+        </div>
+        <!-- <div class="casestudy">
             <div class="info">
                 <h3>Project</h3>
                 <p class="project_idea"></p>
@@ -88,7 +88,7 @@
                 <a class="project_link" target="_blank" href="#">Go to website</a>
             </div>
             <div class="close"></div>
-        </div>
+        </div> -->
     </main>
     <footer id="contact">
         <ul>
@@ -249,6 +249,5 @@
             gl_FragColor = finalColor;
         }
     </script>
-    <script type="text/javascript" src="infos.json"></script>
 </body>
 </html>
