:poop: Trying stuff

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             <p>Here is my <a href="resume/cv-en.pdf" target="_blank">resume</a> and a <a href="portfolio_photo.pdf" target="_blank">pictures portfolio</a>.</p>
         </div>
         <div class="curtain" data-vs-id="plane-vs" data-fs-id="plane-fs">
-            <canvas width="800" height="600" class="canvas js-canvas"></canvas>
+            <canvas width="800" height="600" class="canvas js-canvas visible"></canvas>
         </div>
     </header>
     <!-- <div class="responsive">
