:lipstick: Add loading screen

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,12 @@
 
 </head>
 <body>
+    <div class="test visible">
+        <div class="loading">
+            <p class="text">Loading</p>
+            <div class="loader"></div>
+        </div>
+    </div>
     <div id="canvas"></div>
     <div class="aside">
         <img src="images/logo.png" alt="">
