--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
 </head>
 <body>
-    <div class="test visible">
+    <div class="loading-container visible">
         <div class="loading">
             <p class="text">Loading</p>
             <div class="loader"></div>
