:sparkles: Add real h1 and h2

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Romain Maillot - Developer & Designer</title>
+    <title>Romain Maillot - Creative Developer & Designer</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
@@ -43,9 +43,10 @@
     <!-- <div class="mouse"></div> -->
     <header>
         <div class="content">
-            <h2>Welcome,</h2>
-            <p>I'm Romain MAILLOT a creative developer & designer living in Paris.</p>
-            <p>Here is my <a href="resume/cv-en.pdf" target="_blank">resume</a> and a <a href="portfolio_photo.pdf" target="_blank">pictures portfolio</a>.</p>
+            <h3>Welcome,</h3>
+            <!-- Best for SEO -->
+            <div class="text"><p>I'm&nbsp</p><h1>Romain MAILLOT&nbsp</h1><h2>a creative developer & designer&nbsp</h2><p>living in Paris.</p></div>
+            <p class="text">Here is my&nbsp<a href="resume/cv-en.pdf" target="_blank">resume</a>&nbspand a&nbsp<a href="portfolio_photo.pdf" target="_blank">pictures portfolio</a>.</p>
         </div>
         <div class="curtain" data-vs-id="plane-vs" data-fs-id="plane-fs">
             <canvas width="800" height="600" class="canvas js-canvas visible"></canvas>
