:fire: Remove portfolio photo

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             <h3>Welcome,</h3>
             <!-- Best for SEO -->
             <div class="text"><p>I'm&nbsp</p><h1>Romain MAILLOT&nbsp</h1><h2>a creative developer & designer&nbsp</h2><p>living in Paris.</p></div>
-            <p class="text">Here is my&nbsp<a href="resume/cv-en.pdf" target="_blank">resume</a>&nbspand a&nbsp<a href="portfolio_photo.pdf" target="_blank">pictures portfolio</a>.</p>
+            <p class="text">Here is my&nbsp<a href="resume/cv-en.pdf" target="_blank">resume</a>.</p>
         </div>
         <div class="curtain" data-vs-id="plane-vs" data-fs-id="plane-fs">
             <canvas width="800" height="600" class="canvas js-canvas visible"></canvas>
