:bug: Test fixing loader

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-    <div class="loading-container visible">
+    <div class="loading-container">
         <div class="loading">
             <p class="text">Loading</p>
             <div class="loader"></div>
