:sparkles: Change text on internship and CV

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         <h1>It's coming.</h1>
     </div> -->
     <main>
-        <div id="work" class="project js-project right" data-title="pickpack internship" data-text="I made a three months internship in Berlin at the pickpack startup. I was a React-Native developer on the application, I handled bug fixes, made code reviews and added tests with Detox and Enzyme. I reworked and improved performances of views around the app (such as the map or the onboarding)." data-link="https://www.pickpack.de/?_branch_match_id=688013326299254159">
+        <div id="work" class="project js-project right" data-title="pickpack internship" data-text="During a three months internship in Berlin at the pickpack startup, I was a React-Native developer and worked on their application. I handled bug fixes, made code reviews and added tests with Detox and Enzyme. I also improved views performances around the app (such as the map or the onboarding)." data-link="https://www.pickpack.de/?_branch_match_id=688013326299254159">
             <img src="images/pickpack.jpg" alt="Pickpack internship">
         </div>
         <div class="project js-project left" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle. I designed some pages with Sketch and developed them as well with basic HTML, CSS and JavaScript." data-link="http://www.geffard.com/">
