:sparkles: Starting cursor logics

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
 
 </head>
 <body>
+    <div class="mouse hidden"></div>
     <div class="loading-container">
         <div class="loading">
             <p class="text">Loading</p>
@@ -41,7 +42,6 @@
             </ul>
         </nav>
     </div>
-    <!-- <div class="mouse"></div> -->
     <header>
         <div class="content">
             <h3>Welcome,</h3>
