:lipstick: Handle hover owith new mouse

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
 </head>
 <body>
-    <div class="mouse hidden"></div>
+    <div class="mouse"></div>
     <div class="loading-container">
         <div class="loading">
             <p class="text">Loading</p>
@@ -36,9 +36,9 @@
         <img src="images/logo.png" alt="">
         <nav>
             <ul>
-                <li><a class="about active" href="#">About</a></li>
-                <li><a class="work" href="#work">Work</a></li>
-                <li><a class="contact" href="#contact">Contact</a></li>
+                <li><a class="about active click" href="#">About</a></li>
+                <li><a class="work click" href="#work">Work</a></li>
+                <li><a class="contact click" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -47,7 +47,7 @@
             <h3>Welcome,</h3>
             <!-- Best for SEO -->
             <div class="text"><p>I'm&nbsp</p><h1>Romain MAILLOT&nbsp</h1><h2>a creative developer & designer&nbsp</h2><p>living in Paris.</p></div>
-            <p class="text">Here is my&nbsp<a href="resume/cv-en.pdf" target="_blank">resume</a>.</p>
+            <p class="text">Here is my&nbsp<a class="click" href="resume/cv-en.pdf" target="_blank">resume</a>.</p>
         </div>
         <div class="curtain" data-vs-id="plane-vs" data-fs-id="plane-fs">
             <canvas width="800" height="600" class="canvas js-canvas visible"></canvas>
@@ -103,11 +103,11 @@
     </main>
     <footer id="contact">
         <ul>
-            <li><a class="link" target="_blank" content="noindex, follow" href="mailto:romainmaillot.rm@gmail.com">Mail</a></li>
-            <li><a class="link" target="_blank" content="noindex, follow" href="https://www.linkedin.com/in/romain-maillot/?locale=en_US">LinkedIn</a></li>
-            <li><a class="link" target="_blank" content="noindex, follow" href="https://github.com/RomainMaillot">Github</a></li>
-            <li><a class="link" target="_blank" content="noindex, follow" href="https://dribbble.com/RMaillot">Dribbble</a></li>
-            <li><a class="link" target="_blank" content="noindex, follow" href="https://www.instagram.com/romain__maillot/">Instagram</a></li>
+            <li><a class="link click" target="_blank" content="noindex, follow" href="mailto:romainmaillot.rm@gmail.com">Mail</a></li>
+            <li><a class="link click" target="_blank" content="noindex, follow" href="https://www.linkedin.com/in/romain-maillot/?locale=en_US">LinkedIn</a></li>
+            <li><a class="link click" target="_blank" content="noindex, follow" href="https://github.com/RomainMaillot">Github</a></li>
+            <li><a class="link click" target="_blank" content="noindex, follow" href="https://dribbble.com/RMaillot">Dribbble</a></li>
+            <li><a class="link click" target="_blank" content="noindex, follow" href="https://www.instagram.com/romain__maillot/">Instagram</a></li>
         </ul>
         <p>Copyright © 2019 Romain Maillot</p>
     </footer>
