:sparkles: Add cool cursor

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 </head>
 <body>
     <div class="mouse"></div>
+    <div class="mouse-middle"></div>
     <div class="loading-container">
         <div class="loading">
             <p class="text">Loading</p>
