:sparkles: Update with latest projects

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Romain Maillot - Creative Developer & Designer</title>
-    <meta description="I'm Romain MAILLOT a french creative developer and designer. This is my personnal portfolio where you can find some of my personnal projects." >
+    <meta description="I'm Romain MAILLOT a french creative developer. This is my personnal portfolio where you can find some of my personnal projects." >
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
@@ -47,7 +47,7 @@
         <div class="content">
             <h3>Welcome,</h3>
             <!-- Best for SEO -->
-            <div class="text"><p>I'm&nbsp</p><h1>Romain MAILLOT&nbsp</h1><h2>a creative developer & designer&nbsp</h2><p>living in Paris.</p></div>
+            <div class="text"><p>I am&nbsp</p><h1>Romain Maillot,&nbsp</h1><h2>a creative developer&nbsp</h2><p>living in Paris.</p></div>
             <p class="text">Here is my&nbsp<a class="click" href="resume/cv-en.pdf" target="_blank">resume</a>.</p>
         </div>
         <div class="curtain" data-vs-id="plane-vs" data-fs-id="plane-fs">
@@ -58,27 +58,33 @@
         <h1>It's coming.</h1>
     </div> -->
     <main>
-        <div id="work" class="project js-project right" data-title="pickpack internship" data-text="During a three months internship in Berlin at the pickpack startup, I was a React-Native developer and worked on their application. I handled bug fixes, made code reviews and added tests with Detox and Enzyme. I also improved views performances around the app (such as the map or the onboarding)." data-link="https://www.pickpack.de/?_branch_match_id=688013326299254159" data-tech='["react"]'>
+        <div id="work" class="project js-project right" data-title="The Brothers" data-text="I created a Point & Click investigation which take place in a fake horror show. It allowed me to improve my unity skills." data-link="https://serene-golick-2b8309.netlify.app/game" data-tech='["unity"]'>
+            <img src="images/thebrothers.png" alt="Point & Click">
+        </div>
+        <div id="work" class="project js-project left" data-title="3D dj app" data-text="This is one of the inhouse project I worked on at Monopo, I made the 3D with Blender and added interaction on a website with three js, I also handled all the backend with nodejs in order to create rooms to share musics with friends. (you need spotify premium though)" data-link="https://3d-dj.netlify.app/" data-tech='["react", "node", "threejs"]'>
+            <img src="images/3d-dj.png" alt="3D DJ">
+        </div>
+        <div id="work" class="project js-project right" data-title="Monopo internship" data-text="Six months internship in an agency as a developer. I had the chance to work with various technologies on various projects. Client work using HTML/CSS, JS and frameworks but also in house project involving Three.js, GLSL, photogrametry and more..." data-link="https://monopo.co.jp/" data-tech='["react", "wordpress", "node", "threejs", "js", "css", "html"]'>
+            <img src="images/monopo.png" alt="Monopo internship">
+        </div>
+        <div id="work" class="project js-project left" data-title="pickpack internship" data-text="During a three months internship in Berlin at the pickpack startup, I was a React-Native developer and worked on their application. I handled bug fixes, made code reviews and added tests with Detox and Enzyme. I also improved views performances around the app (such as the map or the onboarding)." data-link="https://www.pickpack.de/?_branch_match_id=688013326299254159" data-tech='["react"]'>
             <img src="images/pickpack.jpg" alt="Pickpack internship">
         </div>
-        <div class="project js-project left" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle. I designed some pages with Sketch and developed them as well with basic HTML, CSS and JavaScript." data-link="http://www.geffard.com/" data-tech='["js", "css", "html"]'>
+        <div class="project js-project right" data-title="Olivier Geffard" data-text="Olivier Geffard is a french artist specialise in aquarelle. I designed some pages with Sketch and developed them as well with basic HTML, CSS and JavaScript." data-link="http://www.geffard.com/" data-tech='["js", "css", "html"]'>
             <img src="images/mockup_oliviergeffard.jpg" alt="olivier geffard website">
-        </div>
-        <div class="project js-project right" data-title="Portfolio Sacha Tourtoulou" data-text="Sacha Tourtoulou is a french designer. I worked on one of his portfolios. I created it using React, with Gatsby to solve SEO problems. The site is responsive and displayed lazy loading images for performance." data-link="https://sacha-tourtoulou.netlify.com/" data-tech='["react", "gatsby"]'>
-            <img src="images/sacha_portfolio.png" alt="Sacha tourtoulou portfolio">
         </div>
         <div class="project js-project left" data-title="Webdock Society" data-text="This was a school project, with my team, we decided to make a webdock on intangible culture. I was the lead dev on this project and we made everything with javascript class." data-link="https://webdocksociety.netlify.com/" data-tech='["js", "css", "html"]'>
             <img src="images/webdock.png" alt="webdock sociétal">
         </div>
-        <div class="project js-project right" data-title="POP QUIZZ" data-text="This is a project of pop culture question where I was in charge of the front end development with React" data-link="https://popquizz.netlify.com/" data-tech='["react"]'>
-            <img src="images/pop_quizz.png" alt="Jeux de quizz">
-        </div>
-        <div class="project js-project left" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css and keeping good performance with pure css." data-link="https://earthquake-simulator.netlify.com" data-tech='["css", "html"]'>
+        <div class="project js-project right" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css and keeping good performance with pure css." data-link="https://earthquake-simulator.netlify.com" data-tech='["css", "html"]'>
             <img src="images/mockup_personnal.jpg" alt="Css animations">
         </div>
-        <div class="project js-project right" data-title="DCS" data-text="Event organized by ESCP Europe students. I designed the logo of the DCS 2018 along with flyers, invitations and prints. " >
-            <img src="images/mockup_affichedcs.jpg" alt="Digital consulting summit">
+        <div class="project js-project left" data-title="Portfolio Sacha Tourtoulou" data-text="Sacha Tourtoulou is a french designer. I worked on one of his portfolios. I created it using React, with Gatsby to solve SEO problems. The site is responsive and displayed lazy loading images for performance." data-link="https://sacha-tourtoulou.netlify.com/" data-tech='["react", "gatsby"]'>
+            <img src="images/sacha_portfolio.png" alt="Sacha tourtoulou portfolio">
         </div>
+        <!-- <div class="project js-project right" data-title="DCS" data-text="Event organized by ESCP Europe students. I designed the logo of the DCS 2018 along with flyers, invitations and prints. " >
+            <img src="images/mockup_affichedcs.jpg" alt="Digital consulting summit">
+        </div> -->
         <!-- <div class="casestudy">
             <div class="info">
                 <h3>Project</h3>
@@ -109,6 +115,7 @@
             <li><a class="link click" target="_blank" content="noindex, follow" href="https://github.com/RomainMaillot">Github</a></li>
             <li><a class="link click" target="_blank" content="noindex, follow" href="https://dribbble.com/RMaillot">Dribbble</a></li>
             <li><a class="link click" target="_blank" content="noindex, follow" href="https://www.instagram.com/romain__maillot/">Instagram</a></li>
+            <li><a class="link click" target="_blank" content="noindex, follow" href="https://twitter.com/rom1maillot">Twitter</a></li>
         </ul>
         <p>Copyright © 2019 Romain Maillot</p>
     </footer>
