remove sacha folio

--- a/src/index.html
+++ b/src/index.html
@@ -79,9 +79,9 @@
         <div class="project js-project right" data-title="Personnal project" data-text="For a school project, we were ask to made an experience using animation css and keeping good performance with pure css." data-link="https://earthquake-simulator.netlify.com" data-tech='["css", "html"]'>
             <img src="images/mockup_personnal.jpg" alt="Css animations">
         </div>
-        <div class="project js-project left" data-title="Portfolio Sacha Tourtoulou" data-text="Sacha Tourtoulou is a french designer. I worked on one of his portfolios. I created it using React, with Gatsby to solve SEO problems. The site is responsive and displayed lazy loading images for performance." data-link="https://sacha-tourtoulou.netlify.com/" data-tech='["react", "gatsby"]'>
+        <!-- <div class="project js-project left" data-title="Portfolio Sacha Tourtoulou" data-text="Sacha Tourtoulou is a french designer. I worked on one of his portfolios. I created it using React, with Gatsby to solve SEO problems. The site is responsive and displayed lazy loading images for performance." data-link="https://sacha-tourtoulou.netlify.com/" data-tech='["react", "gatsby"]'>
             <img src="images/sacha_portfolio.png" alt="Sacha tourtoulou portfolio">
-        </div>
+        </div> -->
         <!-- <div class="project js-project right" data-title="DCS" data-text="Event organized by ESCP Europe students. I designed the logo of the DCS 2018 along with flyers, invitations and prints. " >
             <img src="images/mockup_affichedcs.jpg" alt="Digital consulting summit">
         </div> -->
